--- a/src/templates/TestWebServiceURL.xml
+++ b/src/templates/TestWebServiceURL.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-    <soap:Body>
-        <ProcessWebServiceRequestResponse xmlns="http://edupoint.com/webservices/">
-            <ProcessWebServiceRequestResult>
-                <TestWebServiceURL>
-                    <OrganizationName>{{ ORG_NAME }}</OrganizationName>
-                </TestWebServiceURL>
-            </ProcessWebServiceRequestResult>
-        </ProcessWebServiceRequestResponse>
-    </soap:Body>
+  <soap:Body>
+    <ProcessWebServiceRequestResponse xmlns="http://edupoint.com/webservices/">
+      <ProcessWebServiceRequestResult>&lt;TestWebServiceURL&gt;&lt;OrganizationName&gt;{{{ ORG_NAME }}}&lt;/OrganizationName&gt;&lt;/TestWebServiceURL&gt;</ProcessWebServiceRequestResult>
+    </ProcessWebServiceRequestResponse>
+  </soap:Body>
 </soap:Envelope>
